将Modrinth的商标信息移除，移除大部分不需要的文件
