# apps/app/src/api/ads-init.js
@@ -1,14 +1,14 @@
 document.addEventListener(
   'click',
   function (e) {
-    window.top.postMessage({ modrinthAdClick: true }, 'https://modrinth.com')
+    window.top.postMessage({ modrinthAdClick: true }, 'https://bbsmc.net')
 
     let target = e.target
     while (target != null) {
       if (target.matches('a')) {
         e.preventDefault()
         if (target.href) {
-          window.top.postMessage({ modrinthOpenUrl: target.href }, 'https://modrinth.com')
+          window.top.postMessage({ modrinthOpenUrl: target.href }, 'https://bbsmc.net')
         }
         break
       }
@@ -19,5 +19,5 @@ document.addEventListener(
 )
 
 window.open = (url, target, features) => {
-  window.top.postMessage({ modrinthOpenUrl: url }, 'https://modrinth.com')
+  window.top.postMessage({ modrinthOpenUrl: url }, 'https://bbsmc.net')
 }
