# apps/labrinth/src/routes/v3/version_creation.rs
@@ -811,7 +811,7 @@ pub async fn upload_file(
 
     if other_file_names.contains(&format!("{}.{}", file_name, file_extension)) {
         return Err(CreateError::InvalidInput(
-            "Duplicate files are not allowed to be uploaded to Modrinth!"
+            "此文件在这之前已经被上传到BBSMC过,无法重复上传!"
                 .to_string(),
         ));
     }
@@ -851,7 +851,7 @@ pub async fn upload_file(
 
     if exists {
         return Err(CreateError::InvalidInput(
-            "Duplicate files are not allowed to be uploaded to Modrinth!"
+            "此文件在这之前已经被上传到BBSMC过,无法重复上传"
                 .to_string(),
         ));
     }
@@ -969,7 +969,7 @@ pub async fn upload_file(
             .any(|y| y.hash == sha1_bytes || y.hash == sha512_bytes)
     }) {
         return Err(CreateError::InvalidInput(
-            "Duplicate files are not allowed to be uploaded to Modrinth!"
+            "此文件在这之前已经被上传到BBSMC过,无法重复上传"
                 .to_string(),
         ));
     }
